# lucy-syndrome

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  install.sh  pyproject.toml  scar_001_docx_tildes.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: escalation-policy.md  experimental-design.md  logging-schema.json  metrics.md
framework/: ARCHITECTURE.md  README.md  hook_template.py  scar_template.md  settings.json.example
hooks/: README.md  REVERSIBILITY.md  hook_example_review.py  hook_scar_001_docx.py  hook_scar_002_size.py  hook_scar_005_subagent.py  hook_session_start.py  settings.json.example
logging/: .gitignore  README.md  analyze_fires.py  log_opportunity.py  log_scar_fire.py  opportunity_observer.py  validate_opportunities.py
research/: cross-analysis.md  paper.md  statistics.md
scars/: README.md  scar_001_docx_tildes.md  scar_002_code_review_absent.md  scar_003_token_budget.md  scar_004_consult_kb_first.md  scar_005_validate_subagent_output.md  scar_example_001_review_before_deliver.md  scar_example_002_verify_before_claiming.md  scar_example_003_check_context_before_generating.md  scar_example_004_validate_subagent_output.md  scar_example_005_token_budget_hygiene.md  scar_example_006_pre_deploy_audit.md  scar_example_007_persist_memory_before_goodbye.md
tests/: conftest.py  test_analyze_fires.py  test_hook_scar_004_expand.py  test_hooks_edge_cases.py  test_hooks_generic.py  test_hooks_production.py  test_log_opportunity.py  test_log_scar_fire.py  test_opportunity_observer.py  (+2 more)
(+25 files in other folders)
